# claude-lab

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  MIGRATION.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  tasks.py  test_cli.py
.claude/skills/claude-lab/: GUI_README.md  SKILL.md  claude-lab.py
.claude/skills/claude-lab/templates/: k8s-full.Dockerfile  python-dev.Dockerfile
.lab/: README.md  settings.yaml
docs/: ARCHITECTURE.md  AUTO-CLEANUP.md  GLOBAL-INSTALL.md  IMAGE-MANAGEMENT.md  PROJECT-IMAGES.md
examples/: basic-workflow.sh  image-workflow.sh  kepler-project-image.sh  python-integration.py
scripts/: cleanup-on-exit.sh  setup-auto-cleanup.sh
src/claude_lab/: __init__.py  __main__.py  cli.py  dns.py  gui.py  project_analyzer.py  proxy.py
src/claude_lab/templates/: base.Dockerfile  minimal.Dockerfile  templates.json
